2011-10-26  Jakub Jelinek  <jakub@redhat.com>

	* BASE-VER: Set to 4.6.3.
	* DEV-PHASE: Set to prerelease.

2011-10-26  Release Manager

	* GCC 4.6.2 released.

2011-10-25  Kai Tietz  <ktietz@redhat.com>

	* config/i386/mingw32.h (SUBTARGET_FRAME_POINTER_REQUIRED):
	Use for 32-bit frame-pointer, if setjmp is used.

2011-10-24  Jakub Jelinek  <jakub@redhat.com>

	PR debug/50816
	* dwarf2out.c (dwarf2out_source_line): Emit discriminators only if
	-gdwarf-4 or not -gstrict-dwarf.

2011-10-24  Georg-Johann Lay  <avr@gjlay.de>

	PR target/49824
	Backport from mainline r180385
	* doc/extend.texi (Declaring Attributes of Functions):
	Document OS_main and OS_task attributes.
	(Specifying Attributes of Variables): Move up
	subsection "AVR Variable Attributes" as of alphabetical order.

2011-10-24  Georg-Johann Lay  <avr@gjlay.de>

	PR target/50820
	* doc/invoke.texi (AVR Options): New subsubsection to explain EIND
	handling and indirect jump/calls on devices > 128k.

2011-10-23  Uros Bizjak  <ubizjak@gmail.com>

	PR target/50788
	* config/i386/sse.md (avx_maskload<ssemodesuffix><avxmodesuffix>):
	Remove (match_dup 0).

2011-10-21  Georg-Johann Lay  <avr@gjlay.de>

	PR target/50820
	Backport from Mainline r180299.
	* config/avr/libgcc.S (__EIND__): New define to 0x3C.
	(__tablejump__): Consistently use EIND for indirect jump/call.
	(__tablejump_elpm__): Ditto.

2011-10-20  Ramana Radhakrishnan  <ramana.radhakrishnan@linaro.org>

	PR target/50106
	Backport from mainline.
	2011-10-20  Ramana Radhakrishnan  <ramana.radhakrishnan@linaro.org>

	* config/arm/arm.c (thumb_unexpanded_epilogue): Handle return
	reg size from 1-3.

2011-10-19  Jakub Jelinek  <jakub@redhat.com>

	* dwarf2out.c (loc_descriptor): For SUBREG pass SUBREG_REG's mode as
	second argument instead of mode.

	PR target/50350
	Backport from mainline
	2011-09-27  Richard Sandiford  <rdsandiford@googlemail.com>

	PR middle-end/50386
	PR middle-end/50326