@@ -1,3 +1,9 @@
+2011-10-27  Uros Bizjak  <ubizjak@gmail.com>
+	    Steven G. Kargl  <kargl@gcc.gnu.org>
+
+	PR target/50875
+	* gfortran.dg/pr50875.f90: New test.
+
 2011-10-26  Release Manager
 
 	* GCC 4.6.2 released.
