@@ -1,3 +1,9 @@
+2011-10-27  Uros Bizjak  <ubizjak@gmail.com>
+
+	PR target/50875
+	* config/i386/sse.md (*avx_unpcklpd256): Remove extra insn
+	constraints.  Change alternative 1 to "x,m,1".
+
 2011-10-26  Jakub Jelinek  <jakub@redhat.com>
 
 	* BASE-VER: Set to 4.6.3.
